# ClimTools

./: .gitignore  README.md  SPHINX_lisboa_plots.py  SPHINX_post_v2.py  WR_composites.py  WR_composites_SPHINX.py  WRtool_plasim.py  WRtool_primavera.py  WRtool_sphinx.py  cdo_preproc.py  climdiags.py  climtools_lib.py  compare_regime_pdf_ERA.py  diffusion_plots_sphinx.py  energy_balance_sphinx.py  env_cdms2up.yml  env_ctl3.yml  env_ctl4.yml  env_ctl5.yml  environment.yml  figures_ipcc_chap4.py  ice_cover_fit.py  imports.py  input_WRtool_template.in  low_high_zg_variability.py  mean_climates_SPHINX.py  newWRtool.py  normalization_WRtool.py  phase_space_eravariability.py  phase_space_eravariability_2.py  phase_space_models.py  phase_space_reloaded.py  primavera_WP2_plots.py  primavera_coup_bootplots.py  primavera_coup_bootstraps.py  primavera_coup_v2_article.py  pyproject.toml  smonta_ensemble.py  spinup_gregory.py  temperature_projections.py  (+8 more)
climtools/: __init__.py  climdiags.py  climtools_lib.py
cluster_fortran/: cluster_toolkit.f90  cluster_toolkit_parallel.f90  compile_py3.sh
